[FolderModel] Use mostLocalUrl() to properly resolve desktop:/ URLs

This fixes dropping files onto applications in the desktop:/ folder.

BUG: 363991
FIXED-IN: 5.7.0

Differential Revision: https://phabricator.kde.org/D1915